# HoneyTribe

./: pyproject.toml  tox.ini
docs/: cleaning_smoothing_operations.md
examples/: EDA.ipynb  EDA_timeseries.ipynb  backtest_example.py  k_means_clustering_guide.ipynb  timeseries_cleaning_smoothing_demo.py
ml_test/: base.py
ml_test/fireflies/: test_expert_layers.py
ml_test/online_convex_optimization/: test_expert.py  test_gradient_descent.py
src/honeytribe/: backtesting.py  tsa.py
src/honeytribe/bubbles/: timeseries.py
src/honeytribe/eda/: reporting.py  summary.py  timeseries.py
src/honeytribe/fireflies/: expert_layers.py  utils.py
src/honeytribe/metrics/: timeseries.py  utils.py
src/honeytribe/metrics/centrality/: standard.py
src/honeytribe/metrics/correlation/: standard.py  suite.py
src/honeytribe/metrics/variability/: standard.py
src/honeytribe/online_convex_optimization/: base.py  expert.py  gradient_descent.py
src/honeytribe/online_convex_optimization/experimental/: gradient_descent.py
src/honeytribe/reprocessing/: ngboost.py
src/honeytribe/taxonomy/: k_means.py
src/honeytribe/utils/: report.py
tests/: test_backtesting.py  test_backtesting_extra.py  test_backtesting_forward.py  test_timeseries_cleaning_smoothing.py
tests/practical/: test_practical_timeseries_behavior.py
tests/unit/: test_centrality_standard.py  test_correlation_metrics.py  test_correlation_standard.py  test_k_means.py  test_metrics_timeseries.py  test_tsa_timeseriesdata.py  test_tsa_unknown_index_bugfix.py  test_variability_mirror.py  test_variability_standard.py
