[project]
name = "honeytribe"
version = "0.1.0"
description = ""
authors = [
    {name = "BaerVervergaert",email = "bgmj.ververgaert@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "ngboost (>=0.5.6,<0.6.0)",
    "pandas (>=2.3.3,<3.0.0)",
]


[project.optional-dependencies]
torch = ["torch (>=2.8.0,<3.0.0)"]
visual = ["matplotlib (>=3.10.6,<4.0.0)", "weasyprint (>=66.0,<67.0)"]
full = ["torch (>=2.8.0,<3.0.0)", "matplotlib (>=3.10.6,<4.0.0)"]
test = ["pytest (>=8.4.2,<9.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    {include = "ml_test", from = "."},
    {include = "honeytribe", from = "src"},
]
[tool.poetry.group.visual.dependencies]
weasyprint = "^66.0"

